moved schema boy
added moderation and models (datamodel-codegen)
Revised db schema

did some things to openapi schema
